--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
 layout: home
 author_profile: true
 header:
-    image: /assets/images/header_sabah.jpg
+    image: /assets/images/header_galaxy.jpg
+    show_overlay_excerpt: true
+    excerpt: "Curiosity fuels the journey, code lights the way."
+    actions:
+    - label: "More Info"
+      url: "https://unsplash.com"
 ---
