Add interactive timeline feature and layout optimizations
Introduced a new interactive timeline page with supporting data in _data/timeline.yml, timeline page at /timeline/, and timeline-specific CSS and JS for enhanced user experience. Updated navigation to link to the new timeline, refactored the About page to show recent highlights and link to the full timeline, and added layout-optimization.css for improved page width and layout. Minor updates to index.html and head includes to load new styles.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
 author_profile: true
+classes: wide
 header:
     image: /assets/images/header_galaxy.jpg
     show_overlay_excerpt: true
@@ -12,3 +13,5 @@ header:
     - label: "More Info"
       url: "https://unsplash.com"
 ---
+
+<link rel="stylesheet" href="{{ '/assets/css/layout-optimization.css' | relative_url }}">
